clang/test/BSC/Negative/Driver/options/save_temp/save_temp.cbs
// RUN: %clang -save-temps %s

struct Foo {
  int a;
};

int struct Foo::getA(struct Foo* this) {
  return this->a;
}


int main() {
  struct Foo foo = {.a = 1};
  foo.getA();
  return 0;
}
